# bark-bot

./: .gitignore  Cargo.toml  LICENSE  grunt.txt
barkers/: test_best_match.json  test_embedding.json  test_interrogate.json  test_prompt.json  test_pull.json  test_push.json
src/: lib.rs  main.rs  prelude.rs
src/bt/: controller.rs  mod.rs  model.rs  model_controller.rs  values.rs
src/bt/nodes/: embedding.rs  interrogate.rs  messages.rs  mod.rs  plain_prompt.rs  prompting.rs  variables.rs  wrappers.rs
src/bt/nodes/arc/: mod.rs
src/bt/nodes/db/: mod.rs  pull.rs  push.rs
src/bt/nodes/extensions/: mod.rs  search.rs
src/bt/nodes/io/: file.rs  interactive_prompt.rs  mod.rs  std.rs
src/bt/nodes/mcp/: mod.rs
src/bt/nodes/wrappers/: best_match.rs  branch_by_score.rs  interrogate.rs  knn.rs  mod.rs  repeat_until.rs  repl.rs
src/clients/: mcp.rs  mod.rs  ollama.rs  openai.rs  tools.rs
test_scripts/: called_tree.json  test_agent.json  test_bad_prompt.json  test_branch_by_score.json  test_call_tree.json  test_embedding.json  test_fetch.json  test_interrogate.json  test_knn.json  test_pick_best_prompt.json  test_prompt.json  test_pull.json  test_push.json  test_repl.json  test_repl.ron  test_safety.json  test_search.json  test_stdio.json  test_without_thoughts.json
