[package]
name = "bark-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
behavior-bark = { path = "../behavior-bark" }
serde = "1.0"
serde_json = "1.0"
openai-api-rs = "6"
env_logger = "0.11.0"
sqlite-vec = "0.1.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
zerocopy = "0.7.35"
ureq = "2"
ron = "0.9"
once_cell = "1.21.1"
ollama-rs = "0.2.6"
futures = "0.3.25"
tokio = { version = "1.42", features = ["full"] }
mcp-client = "0.1.0"
mcp-core = "0.1.0"
mcp-spec = "0.1.0"
anyhow = "1.0"
tower-service = "0.3"
tower = { version = "0.4", features = ["timeout", "util"] }