[package]
name = "bark-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
behavior-bark = { git = "https://github.com/seurimas/behavior-bark", branch = "main" }
serde = "1.0"
serde_json = "1.0"
openai-api-rs = "=6.0.6"
env_logger = "0.11.0"
sqlite-vec = "0.1.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
zerocopy = "0.7.35"
ureq = "2"
ron = "0.9"
once_cell = "1.21.1"
ollama-rs = { git = "https://github.com/seurimas/ollama-rs.git", branch = "master" }
futures = "0.3.25"
tokio = { version = "1.42", features = ["full"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "0e2b115c10fbc1be1e06cd18a1526ec6615cc38d", features = ["client", 
    "transport-sse",
    "transport-child-process",] }
anyhow = "1.0"
tower-service = "0.3"
tower = { version = "0.4", features = ["timeout", "util"] }
thread_local = "1.1"